# extension-template-c

./: CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  duckdb_extension_c.Makefile
.github/workflows/: MainDistributionPipeline.yml
duckdb_capi/: README.md  duckdb_extension.h
src/: add_numbers.cpp  capi_quack.c  capi_quack.cpp
test/sql/: capi_quack.test
